k8s/manifests/manager/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: manager
  namespace: skauswatch
  labels:
    app.kubernetes.io/name: manager
    app.kubernetes.io/component: api
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: manager
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
  - name: grpc
    port: 50051
    targetPort: 50051
    protocol: TCP
